--- a/Lista06/Lista_06.ipynb
+++ b/Lista06/Lista_06.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "id": "aD-fWOVSA_uf"
    },
@@ -23,8 +23,7 @@
     "import numpy as np\n",
     "from sklearn import metrics\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
-    "from sklearn.neighbors import KNeighborsRegressor\n",
-    "from sklearn.model_selection import train_test_split"
+    "from sklearn.model_selection import train_test_split\n"
    ]
   },
   {
