--- a/Lista07/Lista07.ipynb
+++ b/Lista07/Lista07.ipynb
@@ -913,7 +913,7 @@
     },
     {
       "source": [
-        "#### Montando um dataframe com os resultados das métricas de cada modelo"
+        "#### Montando um dataframe com os resultados das métricas de cada modelo e ordenando esse dataframe em ordem decrescente de f1-score."
       ],
       "cell_type": "markdown",
       "metadata": {}
@@ -1971,7 +1971,7 @@
     },
     {
       "source": [
-        "Verificando os parâmetros existentes no classificador KNeighborsClassifier"
+        "#### Verificando os parâmetros existentes no classificador KNeighborsClassifier"
       ],
       "cell_type": "markdown",
       "metadata": {}
